--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -103,6 +103,15 @@
                                     <rect key="frame" x="16" y="305" width="368" height="30"/>
                                 </variation>
                             </textField>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6iN-7Z-5nf">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="222" width="42" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -112,6 +121,7 @@
                                 <exclude reference="9qb-u3-aeq"/>
                                 <exclude reference="tfF-wT-l9q"/>
                                 <exclude reference="unV-JW-AVz"/>
+                                <exclude reference="6iN-7Z-5nf"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -121,6 +131,7 @@
                                 <include reference="9qb-u3-aeq"/>
                                 <include reference="tfF-wT-l9q"/>
                                 <include reference="unV-JW-AVz"/>
+                                <include reference="6iN-7Z-5nf"/>
                             </mask>
                         </variation>
                     </view>
@@ -129,6 +140,7 @@
                         <outlet property="enterNameTextField" destination="unV-JW-AVz" id="Fns-nK-a7T"/>
                         <outlet property="mailButton" destination="xfv-z1-3c9" id="9sA-m1-C7d"/>
                         <outlet property="messageLabel" destination="9qb-u3-aeq" id="piF-h0-cAx"/>
+                        <outlet property="nameLabel" destination="6iN-7Z-5nf" id="GOw-Tt-Nu0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r5B-vZ-TOZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
